--- a/app/views/admin/dashboard/index.html.erb
+++ b/app/views/admin/dashboard/index.html.erb
@@ -1,7 +1,13 @@
 <section class="container mx-auto max-w-full h-screen py-24">
   <div class="grid grid-cols-2 mt-16">
     <div class="px-6">
-      <h1 class="text-3xl mb-6">Galleries</h1>
+      <div class="flex justify-between items-center mb-6 ">
+        <h1 class="text-3xl">Galleries</h1>
+        <div>
+          <%= link_to "New Gallery",  new_admin_gallery_path, class: "btn-primary" %>
+        </div>
+      </div>
+
       <div class="space-y-4">
         <% @galleries.each do |gallery| %>
           <div class="flex items-center">
@@ -14,7 +20,13 @@
     </div>
 
     <div class="px-6">
-      <h1 class="text-3xl mb-6">Products</h1>
+      <div class="flex justify-between items-center mb-6">
+        <h1 class="text-3xl">Products</h1>
+        <div>
+            <%= link_to "New Product",  new_admin_product_path, class: "btn-primary" %>
+        </div>
+      </div>
+
       <div class="space-y-4">
         <% @products.each do |product| %>
         <div class="flex items-center">
