--- a/app/views/admin/galleries/edit.html.erb
+++ b/app/views/admin/galleries/edit.html.erb
@@ -7,12 +7,13 @@
           <%= f.label :title, class: "block font-bold text-lg" %>
           <%= f.text_field :title, class: "border rounded-md px-3 py-2 w-full mb-4" %>
           <%= f.label :cover_img, "Select Cover Image", class: "block font-bold text-lg" %>
-          <%= f.file_field :cover_img,class: "btn-primary mb-4" %>
+          <%= f.file_field :cover_img, class: "btn-primary mb-4" %>
           <%= f.label :gallery_img, "Select Gallery Images", class: "block font-bold text-lg" %>
           <%= f.file_field :gallery_img, multiple: true, class: "btn-primary" %>
           <%= f.submit "Update", class: "btn-primary" %>
         </div>
       <% end %>
     </div>
+    <%= link_to "Dashboard", admin_root_path %>
   </div>
 </section>
