--- a/app/views/pages/portfolio.html.erb
+++ b/app/views/pages/portfolio.html.erb
@@ -8,8 +8,8 @@
         <div class="aspect-[3/4] relative group overflow-hidden rounded-lg">
 
           <% if gallery.cover_img.attached? %>
-            <%= link_to url_for(gallery.cover_img.variant(resize_to_limit: [300, 400])), data: { fancybox: "gallery-#{gallery.id}" } do %>
-              <%= image_tag gallery.cover_img.variant(resize_to_limit: [300, 400]), class: "w-full h-full object-cover" %>
+            <%= link_to url_for(gallery.cover_img), data: { fancybox: "gallery-#{gallery.id}" } do %>
+              <%= image_tag gallery.cover_img, class: "w-full h-full object-cover" %>
             <% end %>
           <% end %>
 
@@ -22,7 +22,7 @@
           </div>
 
           <% gallery.gallery_img.each do |image| %>
-            <%= image_tag url_for(image.variant(resize_to_limit: [800, 1000])), data: { fancybox: "gallery-#{gallery.id}" }, style: "display:none;" %>
+            <%= image_tag url_for(image), data: { fancybox: "gallery-#{gallery.id}" }, style: "display:none;" %>
           <% end %>
         </div>
       <% end %>
