--- a/app/views/contact_mailer/create_email.html.erb
+++ b/app/views/contact_mailer/create_email.html.erb
@@ -1,5 +1,5 @@
 <p><strong>Nome:</strong> <%= @name %></p>
-<p><strong>Email:</strong> <%= @email %></p>
+<p><strong>Email:</strong> <%= @reply_email %></p>
 <p><strong>Email:</strong> <%= @date %></p>
 <p><strong>Email:</strong> <%= @location %></p>
 <p><strong>Mensagem:</strong> <%= @message %></p>
