--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -55,7 +55,7 @@
               <div class="mr-3 mt-1"><%= render "pages/icons/email" %></div>
               <div>
                 <p class="font-medium">Email</p>
-                <%= mail_to "carterfotografia@gmail.com", "carterfotografia@gmail.com", root_path, class: "text-[color:var(--foreground)] hover:text-[color:var(--color-gold-dark)] transition-colors duration-300" %>
+                <%= link_to "carterfotografia@gmail.com", root_path, class: "text-[color:var(--foreground)] hover:text-[color:var(--color-gold-dark)] transition-colors duration-300" %>
               </div>
             </div>
           </div>
