--- a/app/views/pages/portfolio.html.erb
+++ b/app/views/pages/portfolio.html.erb
@@ -9,7 +9,7 @@
 
           <% if gallery.cover_img.attached? %>
             <%= link_to data: { fancybox: "gallery-#{gallery.id}" } do %>
-              <%= cl_image_tag(gallery.cover_img.key, quality: "auto") class: "w-full h-full object-cover" %>
+              <%= cl_image_tag(gallery.cover_img.key, quality: "auto", class: "w-full h-full object-cover") %>
             <% end %>
           <% end %>
 
@@ -22,7 +22,7 @@
           </div>
 
           <% gallery.gallery_img.each do |image| %>
-            <%= cl_image_tag(image.key, quality: "auto") data: { fancybox: "gallery-#{gallery.id}" }, style: "display:none;" %>
+            <%= cl_image_tag(image.key, quality: "auto", data: { fancybox: "gallery-#{gallery.id}" }, style: "display:none;" ) %>
           <% end %>
         </div>
       <% end %>
