--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,5 @@
 <div class="relative h-screen">
-  <div class="absolute inset-0 bg-cover bg-bottom" style="background-image: url(<%= asset_path('COVER.jpg')%>);">
+  <div class="absolute inset-0 bg-cover bg-bottom" style="background-image: url(<%= cl_image_tag('https://res.cloudinary.com/dpbweqf7f/image/upload/v1749243320/COVER_q1caw6.jpg') %>">
     <div class="absolute inset-0 bg-black/30"></div>
   </div>
 
