--- a/app/views/partials/_cards.html.erb
+++ b/app/views/partials/_cards.html.erb
@@ -11,7 +11,7 @@
       <% end %>
     </div>
     <div class="mt-12 text-center">
-     <%= link_to "View Full Portfolio", pages_portfolio_path, class: "btn-gold" %>
+     <%= link_to "View Full Portfolio", portfolio_path, class: "btn-gold" %>
     </div>
   </div>
  </section>
