--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -10,7 +10,7 @@
 
       <p class="text-lg md:text-xl mb-8 md:mb-10">Wedding photography that tells your unique story with artistic vision and authentic emotion</p>
 
-      <%= link_to "View Portfolio", pages_portfolio_path, class: "inline-flex bg-sand hover:bg-sand-light font-medium cursor-pointer text-black rounded-lg px-6 py-2 mx-2" %>
+      <%= link_to "View Portfolio", portfolio_path, class: "inline-flex bg-sand hover:bg-sand-light font-medium cursor-pointer text-black rounded-lg px-6 py-2 mx-2" %>
 
     </div>
   </div>
@@ -72,7 +72,7 @@
       <p class="max-w-2xl mx-auto mb-8 text-foreground">Let's create beautiful memories together. Contact me to check availability for your wedding date.</p>
     </div>
     <div class="text-center">
-      <%= link_to "Get In Touch", pages_contact_path, class: "btn-gold" %>
+      <%= link_to "Get In Touch", contact_path, class: "btn-gold" %>
     </div>
   </div>
 </section>
