--- a/app/views/partials/_navbar.html.erb
+++ b/app/views/partials/_navbar.html.erb
@@ -5,10 +5,10 @@
     </div>
     <div class="hidden md:flex items-center space-x-8">
       <%= link_to "Home", root_path, class: "hover:text-gold-dark transition-colors duration-300 #{'active' if current_page?(root_path)}" %>
-      <%= link_to "About", pages_about_path, class: "hover:text-gold-dark transition-colors duration-300 #{'active' if current_page?(pages_about_path)}" %>
-      <%= link_to "Portfolio", pages_portfolio_path, class: "hover:text-gold-dark transition-colors duration-300 #{'active' if current_page?(pages_portfolio_path)}" %>
-      <%= link_to "Products", pages_products_path, class: "hover:text-gold-dark transition-colors duration-300 #{'active' if current_page?(pages_products_path)}" %>
-      <%= link_to "Contact", pages_contact_path, class: "hover:text-gold-dark transition-colors duration-300 #{'active' if current_page?(pages_contact_path)}" %>
+      <%= link_to "About", about_path, class: "hover:text-gold-dark transition-colors duration-300 #{'active' if current_page?(about_path)}" %>
+      <%= link_to "Portfolio", portfolio_path, class: "hover:text-gold-dark transition-colors duration-300 #{'active' if current_page?(portfolio_path)}" %>
+      <%= link_to "Products", products_path, class: "hover:text-gold-dark transition-colors duration-300 #{'active' if current_page?(products_path)}" %>
+      <%= link_to "Contact", contact_path, class: "hover:text-gold-dark transition-colors duration-300 #{'active' if current_page?(contact_path)}" %>
     </div>
     <button data-action="click->navbar#toggle" class="md:hidden focus:outline-none">
       <svg data-navbar-target="openIcon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
@@ -23,10 +23,10 @@
   <div data-navbar-target="menu" data-controller="navigation" class="hidden md:hidden bg-white shadow-lg absolute w-full">
     <div class="flex flex-col py-4 space-y-4 container">
       <%= link_to "Home", root_path, class: "hover:text-gold-dark transition-colors duration-300 #{'active' if current_page?(root_path)}" %>
-      <%= link_to "About", pages_about_path, class: "hover:text-gold-dark transition-colors duration-300 #{'active' if current_page?(pages_about_path)}" %>
-      <%= link_to "Portfolio", pages_portfolio_path, class: "hover:text-gold-dark transition-colors duration-300 #{'active' if current_page?(pages_portfolio_path)}" %>
-      <%= link_to "Products", pages_products_path, class: "hover:text-gold-dark transition-colors duration-300 #{'active' if current_page?(pages_products_path)}" %>
-      <%= link_to "Contact", pages_contact_path, class: "hover:text-gold-dark transition-colors duration-300 #{'active' if current_page?(pages_contact_path)}" %>
+      <%= link_to "About", about_path, class: "hover:text-gold-dark transition-colors duration-300 #{'active' if current_page?(about_path)}" %>
+      <%= link_to "Portfolio", portfolio_path, class: "hover:text-gold-dark transition-colors duration-300 #{'active' if current_page?(portfolio_path)}" %>
+      <%= link_to "Products", products_path, class: "hover:text-gold-dark transition-colors duration-300 #{'active' if current_page?(products_path)}" %>
+      <%= link_to "Contact", contact_path, class: "hover:text-gold-dark transition-colors duration-300 #{'active' if current_page?(contact_path)}" %>
     </div>
   </div>
 </nav>
