--- a/app/views/pages/portfolio.html.erb
+++ b/app/views/pages/portfolio.html.erb
@@ -4,25 +4,10 @@
     <p class="text-center text-foreground max-w-2xl mx-auto mb-12" >A collection of cherished moments from weddings across Europe's most beautiful locations.</p>
 
     <div class="gallery-grid" data-controller="fancybox">
-      <% @galleries.each do |gallery| %>
+      <% @portfolio.photos.each do |photo| %>
         <div class="aspect-[3/4] relative group overflow-hidden rounded-lg">
-
-          <% if gallery.cover_img.attached? %>
-            <%= link_to gallery.cover_img.url, data: { fancybox: "gallery-#{gallery.id}" } do %>
-              <%= cl_image_tag(gallery.cover_img.key, quality: "auto", class: "w-full h-full object-cover") %>
-            <% end %>
-          <% end %>
-
-          <div class="pointer-events-none">
-            <div class="absolute inset-0 group-hover:backdrop-blur-[1px] bg-black/0 group-hover:bg-black/40 transition-colors duration-500 rounded-lg"></div>
-
-            <span class="absolute inset-0 flex flex-col justify-center items-center rounded-lg translate-y-full group-hover:translate-y-0 opacity-0 group-hover:opacity-100 transition-all duration-500 text-4xl font-playfair text-white">
-              <%= gallery.title %>
-            </span>
-          </div>
-
-          <% gallery.gallery_img.each do |image| %>
-            <%= cl_image_tag(image.key, quality: "auto", data: { fancybox: "gallery-#{gallery.id}" }, style: "display:none;" ) %>
+          <%= link_to url_for(photo), data: { fancybox: "photo" } do %>
+            <%= image_tag photo, quality: "auto", class: "w-full h-full object-cover" %>
           <% end %>
         </div>
       <% end %>
